GUIDIR   = $(top_builddir)/GUI
JAVAROOT = $(GUIDIR)/src

if HAVE_JAVA
all: $(jarfile)
else
all: 
endif

basejarfile = $(PACKAGE)-gui-$(VERSION).jar
jarfile     = $(GUIDIR)/$(basejarfile)
jardir      = $(libdir)/GUI
jar_DATA    = $(jarfile)

JAVA_HOME=@JAVA_HOME@
JAVAC=@JAVAC@
JAVA=@JAVA@
JAR=@JAR@

# In 'DIST_NOINST_DATA.include' we define 'RESOURCES' variable (PNGs/TXTs)
# and the 'dist_noinst_DATA' variable that includes the RESOURCEs plus
# the 'DimemasGUI.in' 
include DIST_NOINST_DATA.include
include DIST_NOINST_JAVA.include

# List all the dependencies required by the GUI
DEPENDENCIES=$(GUIDIR)/lib/commons-io-2.4.jar
EXTRA_DIST=$(DEPENDENCIES)

#JAVACFLAGS = -Xlint -encoding utf8 -cp $(DEPENDENCIES) -cp $(JAVAROOT)
#JAVACFLAGS=-Xlint -encoding utf8 -cp $(DEPENDENCIES)
if JVM_HEAP_RESTRICTION
JVMFLAGS=-Xmx2048m -Xms256m
JAVACFLAGS=-J-Xmx2048m -J-Xms256m -encoding utf8 -cp "$(DEPENDENCIES):$(JAVAROOT)"
else
JVMFLAGS=
JAVACFLAGS=-encoding utf8 -cp "$(DEPENDENCIES):$(JAVAROOT)"
endif

$(jarfile): $(dist_noinst_JAVA) $(dist_noinst_DATA)
	$(JAR) cfm $@ $(MANIFEST) $(JARFLAGS) $(RESOURCES) `find . -name "*.class"`
	
$(dist_noinst_JAVA): updateAndCheckJavaFilesList mkversion manifest runscript

updateAndCheckJavaFilesList:
	rm $(JAVAROOT)/new_DIST_NOINST_JAVA.include; \
	line="dist_noinst_JAVA = "; \
	for next in `find $(JAVAROOT) -name "*.java" && echo "THE_END"` ; do \
	  if test "$$next" != "THE_END"; then \
	    echo $$line" \\" >> $(JAVAROOT)/new_DIST_NOINST_JAVA.include; \
	    # line=`echo "$$next" | sed "s/^.*src\/classes\/\(.*\)/\1 /"` ; \
	    line=`echo "$$next" | sed "s/^.*GUI\/src\/\(.*\)/\1 /"` ; \
	  else \
	    echo $$line >> $(JAVAROOT)/new_DIST_NOINST_JAVA.include; \
	  fi; \
	done; \
	diff $(JAVAROOT)/DIST_NOINST_JAVA.include $(JAVAROOT)/new_DIST_NOINST_JAVA.include; \
	if test false = true; then \
	  echo "DIST_NOINST_JAVA.include is too old, replace it with new_DIST_NOINST_JAVA.include and try again."; \
	fi

dist-local: 

clean-local: rmclassfiles

rmclassfiles:
	find $(JAVAROOT) -name "*.class" -exec rm {} \;

MANIFEST=$(GUIDIR)/MANIFEST.MF
manifest:
	echo "Manifest-Version: 1.0"                           > $(MANIFEST)
	echo "Main-Class: es.bsc.cepbatools.dimemas.gui.Main" >> $(MANIFEST)
	echo "Class-path: commons-io-2.4.jar"                 >> $(MANIFEST)
	
VERSION_DIR=$(JAVAROOT)/es/bsc/cepbatools/dimemas/data
VERSION_FILE=$(VERSION_DIR)/Version.java

mkversion:
	mkdir -p $(VERSION_DIR); \
	touch $(VERSION_FILE); \
	echo "/**" > $(VERSION_FILE); \
	echo " * -- DO NOT EDIT THIS FILE --" >> $(VERSION_FILE); \
	echo " * This file is generated automatically during the build process" >> $(VERSION_FILE); \
	echo " * (./configure && make) based on the standard GNU Auto-tools." >> $(VERSION_FILE); \
	echo " */" >> $(VERSION_FILE); \
	echo "package es.bsc.cepbatools.dimemas.data;" >> $(VERSION_FILE); \
	echo "" >> $(VERSION_FILE); \
	echo "public interface Version {" >> $(VERSION_FILE); \
	echo "" >> $(VERSION_FILE); \
	echo "    public String versionString = \"Dimemas Graphical User Interface $(PACKAGE_VERSION)\";" >> $(VERSION_FILE); \
	echo "" >> $(VERSION_FILE); \
	echo "}" >> $(VERSION_FILE);

RUNSCRIPT=$(GUIDIR)/DimemasGUI
runscript: DimemasGUI.in
	sed 's#@@JARFILE@@#$(basejarfile)#' < DimemasGUI.in > $(RUNSCRIPT)_tmp
	sed 's#@@JVMFLAGS@@#$(JVMFLAGS)#' < $(RUNSCRIPT)_tmp > $(RUNSCRIPT)

install-exec-am: $(RUNSCRIPT)

CLEANFILES = $(jarfile) $(MANIFEST) $(RUNSCRIPT) new_DIST_NOINST_JAVA.include

install-exec-am: $(jarfile) 
	mkdir -p $(DESTDIR)$(libdir)/GUI
	cp $(jarfile) $(DESTDIR)$(libdir)/GUI
	cp $(DEPENDENCIES) $(DESTDIR)$(libdir)/GUI
	chmod a+x $(RUNSCRIPT)
	cp $(RUNSCRIPT) $(DESTDIR)$(bindir)

