noinst_LTLIBRARIES = libDimemasInput.la

INCLUDES = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src/input \
	-I$(top_srcdir)/src/model \
	-I$(top_srcdir)/src/prv_utils \
	-I$(top_srcdir)/src/sched \
	-I$(top_srcdir)/src/utils \
	-I$(top_srcdir)/src/venusclient
  

libDimemasInput_la_SOURCES = \
	yacc.y \
	lex.l \
	check.c \
	check.h \
	file_data_access.c \
	file_data_access.h \
	read.c \
	read.h \
	sddf.c \
	sddf.h \
	sddf_records.h \
	ts.h 

