noinst_LTLIBRARIES = libDimemasIO.la

INCLUDES = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/io \
	-I$(top_srcdir)/src/input \
	-I$(top_srcdir)/src/model \
	-I$(top_srcdir)/src/prv_utils \
	-I$(top_srcdir)/src/sched \
	-I$(top_srcdir)/src/utils \
	-I$(top_srcdir)/src/venusclient
  

libDimemasIO_la_SOURCES = \
	dimemas_io.h \
	dimemas_io.c
