noinst_LTLIBRARIES = libDimemasVenusClient.la

INCLUDES = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src/input \
	-I$(top_srcdir)/src/model \
	-I$(top_srcdir)/src/prv_utils \
	-I$(top_srcdir)/src/sched \
	-I$(top_srcdir)/src/utils \
	-I$(top_srcdir)/src/venusclient

libDimemasVenusClient_la_SOURCES = \
	ClientSocket.cc \
	ClientSocket.h \
	ServerSocket.cc \
	ServerSocket.h \
	Socket.cc \
	SocketException.h \
	Socket.h \
	venusclient.cc \
	venusclient.h

