noinst_LTLIBRARIES = libDimemasIO.la
simulator_dir = $(top_srcdir)/Simulator

INCLUDES = \
	-I$(top_srcdir)/include \
	-I$(simulator_dir)/io \
	-I$(simulator_dir)/input \
	-I$(simulator_dir)/model \
	-I$(simulator_dir)/prv_utils \
	-I$(simulator_dir)/sched \
	-I$(simulator_dir)/utils \
	-I$(simulator_dir)/venusclient
  

libDimemasIO_la_SOURCES = \
	dimemas_io.h \
	dimemas_io.c
